# VOISE

./: .cvsignore  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README.md  compile-webVOISE.sh.in  configure.ac  deploy-webVOISE.sh.in  package-webVOISE.sh.in  update-cl.sh
cpp/: CMakeLists.txt  Makefile.am  NSStar.cpp  addSeed.cpp  getCentroid.cpp  getOp.cpp  getRegion.cpp  pointInRegion.cpp  removeSeed.cpp  skizException.cpp  skizException.h  typedefs.h  vd.cpp  vd.h
cpp/aux-functions/: arrayPosInVector.h  circumcentre.h  inVector.h  metrics.cpp  metrics.h  proposition2.cpp  sqDist.h  updateDict.h
cpp/mex/: addSeedToVD.cpp  addSeedToVDBatch.cpp  getCentroidSeedBatch.cpp  getVDOpBatch.cpp  grabVD.cpp  grabW.cpp  pushVD.cpp  removeSeedFromVD.cpp  removeSeedFromVDBatch.cpp  sopToWop.cpp
cpp/test/: testAddSeedCheckLambda.cpp  testAddSeedCheckV.cpp  testGetCentroid.cpp  testGetVDOp.cpp  testPointInRegion.cpp  testProposition2.cpp  testRemoveSeedCheckLambda.cpp  testRemoveSeedCheckV.cpp
matlab/: .cvsignore  H.m  Makefile.am  SaturnRingDemo.m  VD2AdjacencyMatrix.m  VD2GraphMatrices.m  VD2GraphViz.m  VDexample.m  VOISE.m  VOISEf.m  addSeedToVD.m  addSeedToVDFast.m  addSeedsToVR.m  benchVD.m  boardSeeds.m  checkVD.m  cmpHSTSpiceTimeDelays.m  cmpVDalgo.m  computeHCThreshold.m  computeVD.m  computeVDFast.m  createTestImage.m  divideVD.m  divideVDFast.m  drawVD.m  fig4Seeds.m  filterImage.m  fitswrite.m  getCentroidSeed.m  getCentroidVD.m  getCentroidVDFast.m  getClosedVDOp.m  getDefaultParams.m  getDefaultVOISEParams.m  getEllipseAxes.m  getEquidistantPoint.m  getFiniteVR.m  getFitsKeyVal.m  getFitsPrimaryDataKeywordsValue.m  getHSTInfo.m  (+68 more)
matlab/imageUtils/: ScharrFilter.m  SobelFilter.m  filterImage.m  histEq.m  nagaoMatsuyama.m  startup.m
matlab/limbFit/: EllipseDirectFit.m  allAngles.m  circle.m  circle2.m  dcircle.m  dcircle2.m  dellipse.m  dellipse2.m  dellipse3.m  dellipse4.m  disc.m  ellipse.m  ellipse2.m  ellipse3.m  ellipse4.m  ex2Angles.m  filterImage.m  fitCircle.m  fitCircle2.m  fitEllipse.m  fitEllipse2.m  fitLimb.m  fitLimb2.m  gander94fig1.m  gander94fig4.m  gander94figs23.m  getCircleParams.m  getDefaultFitParams.m  getDiscCenter.m  getEllipseParams.m  getLimb.m  getLimb2.m  getPolePos.m  histEq.m  jacLimbModel.m  leasqr.m  limbFitEx1.m  limbFitEx2.m  limbModel.m  plotLimbFit.m  (+11 more)
matlab/visUtils/: computeJupiterAxis.m  computePlanetAxis.m  computeSaturnAxis.m  computeUranusAxis.m  getPlanetGeometry.m  getPlanetRings.m  getthrshold.m  li.m  ltc.m  minnaert.m  moonphase.m  plotJupiterGrid.m  plotPlanetGrid.m  plotSaturnGrid.m  plotUranusGrid.m
mcc/: .cvsignore  Makefile  Makefile.am  README
python/: knn.py
share/: .cvsignore  Makefile.am  testImage.mat
share/input/: XrayLatLongTest.mat  north.mat  south.mat  south_proj.mat
